bootstrap sass setup done

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,2 @@
-.hello {
-  color: red; }
-  .hello .world {
-    color: #000; }
-  .hello .hey {
-    color: #fff; }
+#content {
+  margin-top: 50px; }
