--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,14 @@
 doctype html
 html
 	head
-		title= title
+		title isomorphic
 		link(rel='stylesheet', href='/stylesheets/main.css')
 		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css')
 	body
-		block content
+		div#react-content= reactOutPut
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
 		script(src='/javascripts/bootstrap.min.js')
+		script(src='/javascripts/parse.js')
 		script(src='/javascripts/main.js')
+		script(src='/javascripts/controller.js')
+			
