--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,8 @@ html
 		link(rel='stylesheet', href='/stylesheets/main.css')
 		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css')
 	body
-		div#react-content= reactOutPut
+		
+		block content
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
 		script(src='/javascripts/bootstrap.min.js')
 		script(src='/javascripts/parse.js')
